Ändrade javascript source i html filen samt la till variabler i js filen

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.css" defer></script>
+    <script src="script.js" defer></script>
     <title>Home/logg in</title>
 </head>
 <body>
     <div class="meny"> 
         <input id="username" type="text" placeholder="username">
         <input id="password" type="text" placeholder="password">
-        <button id="logIn" type="button">Log in</button>
+        <button id="logInBtn" type="button">Log in</button>
     </div>
 </body>
 </html>
