La till en extra div i html filen. La till kod i logOut och tryAgain, istället för att ta bort class meny så gömmer jag logInDiv

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <div class="meny"> 
-        <input id="username" type="text" placeholder="username">
-        <input id="password" type="text" placeholder="password">
-        <button id="logInBtn" type="button">Log in</button>
+        <div id="logIn">
+            <input id="username" type="text" placeholder="username">
+            <input id="password" type="text" placeholder="password">
+            <button id="logInBtn" type="button">Log in</button>
+        </div>
     </div>
 </body>
 </html>
