Ändrade så att passwordet inte syns

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
     <div class="meny"> 
         <div id="logIn">
-            <input id="username" type="text" placeholder="username">
-            <input id="password" type="text" placeholder="password">
-            <button id="logInBtn" type="button">Log in</button>
+            <h3>Sign in</h3>
+            <input id="username" type="text" placeholder="username"><br>
+            <input id="password" type="password" placeholder="password"><br>
+            <button id="logInBtn" type="button">Login</button>
         </div>
     </div>
 </body>
