Ändrade till engelsk kod, ändrade så att lösenord inte sparas i localStorage

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Sign in</title>
 </head>
 <body>
-    <div class="meny"> 
+    <div class="menu"> 
         <div id="logIn">
             <h3>Sign in</h3>
-            <input id="username" type="text" placeholder="username"><br>
-            <input id="password" type="password" placeholder="password"><br>
+            <input id="userInput" type="text" placeholder="username"><br>
+            <input id="passInput" type="password" placeholder="password"><br>
             <button id="logInBtn" type="button">Login</button>
         </div>
     </div>
